--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>server</artifactId>
+    <artifactId>eureka-server</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
