--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 server.port=8088
 debug=false
-spring.application.name=server
+spring.application.name=eureka-server
 
 # actuator
 management.server.port = 18088
