--- a/service-provider/pom.xml
+++ b/service-provider/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>eureka-server</artifactId>
+    <artifactId>service-provider</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
@@ -20,21 +20,13 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.server.ServerApplication</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
 </project>
