--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -20,13 +20,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useSSL=false&useUnicod
 # 连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-### Eureka config
-#eureka.instance.hostname=localhost
-#eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
-## 取消向注册中心注册
-#eureka.client.register-with-eureka=false
-## 取消向注册中心获取信息
-#eureka.client.fetch-registry=false
-## 调整页面状态
-#eureka.instance.status-page-url=/actuator/status
-#eureka.instance.health-check-url=/actuator/health
+## Eureka config
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+# 取消向注册中心注册
+eureka.client.register-with-eureka=false
+# 取消向注册中心获取信息
+eureka.client.fetch-registry=false
+# 调整页面状态
+eureka.instance.status-page-url=/actuator/status
+eureka.instance.health-check-url=/actuator/health
