--- a/ribbon-client/src/main/resources/application.properties
+++ b/ribbon-client/src/main/resources/application.properties
@@ -20,5 +20,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useSSL=false&useUnicod
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 
-service.provider.host=localhost
-service.provider.port=6066
+# service provider
+service-provider.host=localhost
+service-provider.port=6066
+service-provider.name=service-provider
+# 配置 ribbon 客户端 服务提供方,当使用服务发现时需要注释掉
+#service-provider.ribbon.listOfServers=http://${service-provider.host}:${service-provider.port}
+
+service-provider.ribbon.ConnectionTimeout=250
+service-provider.ribbon.ReadTimeout=1000
+service-provider.ribbon.MaxAutoRetries=1
+
+# Eureka config
+eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
