--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useSSL=false&useUnicod
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 
-# 关闭 eureka
-eureka.client.enabled=false
+# Eureka config
+eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
