--- a/ribbon-client/src/main/resources/application.properties
+++ b/ribbon-client/src/main/resources/application.properties
@@ -20,16 +20,21 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useSSL=false&useUnicod
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 
+# 显示的关闭 eureka
+eureka.client.enabled=false
+
 # service provider
 service-provider.host=localhost
 service-provider.port=6066
 service-provider.name=service-provider
 # 配置 ribbon 客户端 服务提供方,当使用服务发现时需要注释掉
-#service-provider.ribbon.listOfServers=http://${service-provider.host}:${service-provider.port}
+service-provider.ribbon.listOfServers=http://${service-provider.host}:${service-provider.port}
 
 service-provider.ribbon.ConnectionTimeout=250
 service-provider.ribbon.ReadTimeout=1000
 service-provider.ribbon.MaxAutoRetries=1
+# 配置 ribbon 具体规则
+service-provider.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
 
 # Eureka config
 eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
