--- a/ribbon-client/pom.xml
+++ b/ribbon-client/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>ribbon-client</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.spring-cloud-manual</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
