--- a/service-provider/pom.xml
+++ b/service-provider/pom.xml
@@ -22,6 +22,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.spring-cloud-manual</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
