--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useSSL=false&useUnicod
 # 连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
+# 显示的关闭 eureka
+eureka.client.enabled=false
 
 # Eureka config
 eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
