--- a/ribbon-client/src/main/resources/application.properties
+++ b/ribbon-client/src/main/resources/application.properties
@@ -33,8 +33,9 @@ service-provider.ribbon.listOfServers=http://${service-provider.host}:${service-
 service-provider.ribbon.ConnectionTimeout=250
 service-provider.ribbon.ReadTimeout=1000
 service-provider.ribbon.MaxAutoRetries=1
-# 配置 ribbon 具体规则
-service-provider.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
+
+# 配置 ribbon 具体规则, 和配置类只能有一个
+#service-provider.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
 
 # Eureka config
 eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
