--- a/hystrix-dashboard/src/main/resources/application.properties
+++ b/hystrix-dashboard/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-# 提供服务
-spring.application.name=service-provider
-server.port=6066
+spring.application.name=hystrix-dashboard
+server.port=5055
 # web application context
-server.servlet.context-path=/service
-
+server.servlet.context-path=/hystrix-dashboard
 debug=false
+
+# actuator
+management.server.port = 15055
+management.endpoints.web.exposure.include=*
 
 # mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -16,9 +18,3 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useSSL=false&useUnicode=true&characterEncoding=utf-8
 # 连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
-# 显示的关闭 eureka
-eureka.client.enabled=false
-
-# Eureka config
-eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
