--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>api</module>
         <module>hystrix-dashboard</module>
         <module>framework-manual</module>
+        <module>config-server</module>
     </modules>
 
     <dependencies>
@@ -34,6 +35,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-security</artifactId>-->
+        <!--</dependency>
+
+        spring.security.user.name=admin
+        spring.security.user.password=admin
+        -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
