--- a/ribbon-client/src/main/resources/application.properties
+++ b/ribbon-client/src/main/resources/application.properties
@@ -39,3 +39,7 @@ service-provider.ribbon.MaxAutoRetries=1
 
 # Eureka config
 eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
+
+
+# 动态配置 hystrix
+dynamic.hystrix.command.timeout = 100
