--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -11,7 +11,12 @@ management.endpoint.shutdown.enabled=true
 
 # config server
 
-spring.cloud.config.server.git.uri=${user.dir}/src/main/resources/configs
+# local file system
+#spring.cloud.config.server.git.uri=${user.dir}/config-server/src/main/resources/configs
+
+spring.cloud.config.server.git.uri=https://github.com/yang040840219/config-server
+spring.cloud.config.server.git.force-pull=true
+
 
 # 服务端配置映射
 # /{application}/{profile}[/{label}]
