--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>api</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+    </dependencies>
+
+
 </project>
