--- a/feign-client/src/main/resources/application.properties
+++ b/feign-client/src/main/resources/application.properties
@@ -1,23 +1,13 @@
 ### ribbon 客户端的负载均衡实现
-spring.application.name=ribbon-client
-server.port=7077
+spring.application.name=feign-client
+server.port=3033
 # web application context
-# server.servlet.context-path=/client
+# server.servlet.context-path=/feign-client
 
 # actuator
-management.server.port = 17077
+management.server.port = 13033
 management.endpoints.web.exposure.include=*
 
-# mybatis
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.service.bean
-# datasource
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useSSL=false&useUnicode=true&characterEncoding=utf-8
-# 连接池
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 
 # service provider
@@ -42,3 +32,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka/
 
 # 动态配置 hystrix
 dynamic.hystrix.command.timeout = 100
+
+
+# 配置 feign
+# 声明时使用的占位符,防止服务提供方名称变更
+user.service.name=service-provider
