--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>framework-manual</module>
         <module>config-server</module>
         <module>config-client</module>
+        <module>feign-client</module>
     </modules>
 
     <dependencies>
@@ -93,6 +94,20 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 
