--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=service-provider
 server.port=6066
 # web application context
-server.servlet.context-path=/service
+# server.servlet.context-path=/service
 
 debug=false
 
